Colaboratory를 통해 생성됨

--- a/math_symbol_prac.ipynb
+++ b/math_symbol_prac.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "math_symbol_prac.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPv+Ntrk+aKkkFjxdBZ5lpw",
+      "authorship_tag": "ABX9TyPlPWhifeL3k1AjAXSRtaKq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,42 +53,60 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "sienjhl7YuIl"
+        "id": "zQn_7bsYeW-v"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "$X_1,X_2,....,X_n이 독립일 때$  \n",
+        "$var$($\\displaystyle\\sum_{i=1}^{n} X_i$) = $\\displaystyle\\sum_{i=1}^{n}var(X_i)$  \n",
+        "이 성립한다.  "
+      ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "zhvgVxNtYv2f"
+        "id": "9U201RsFfXpE"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "$X$~$N(m,\\sigma)$  \n",
+        "$f(x) = \\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$   \n",
+        "$\\int_{-\\infty}^{\\infty}$$\\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$ = 1"
+      ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Qz3na5q4Yv4e"
+        "id": "Ca0SyOJXhXBl"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "\\begin{align}\n",
+        "r = Corr(X,Y)&=\\frac{\\frac{1}{n-1}\\displaystyle\\sum_{i=1}^{n} (x_i-\\bar{x})\n",
+        "(y_i-\\bar{y})}\n",
+        "{\\sqrt{\\frac{1}{n-1}\\displaystyle\\sum_{i=1}^{n} (x_i-\\bar{x})}\n",
+        "\\sqrt{\\frac{1}{n-1}\\displaystyle\\sum_{i=1}^{n} (y_i-\\bar{y})}}\\\\\n",
+        "&=  \\frac{\\displaystyle\\sum_{i=1}^{n} (x_i-\\bar{x})\n",
+        "(y_i-\\bar{y})}\n",
+        "{\\sqrt{\\displaystyle\\sum_{i=1}^{n} (x_i-\\bar{x})}\n",
+        "\\sqrt{\\displaystyle\\sum_{i=1}^{n} (y_i-\\bar{y})}}\\\\\n",
+        "\\end{align}\n"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LimKlcHNYv7t"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nXERcWhjqPBr"
       },
       "source": [
         ""
