Colaboratory를 통해 생성됨

--- a/math_symbol_prac.ipynb
+++ b/math_symbol_prac.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "math_symbol_prac.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMV/81osREOfgQOC5QKOasW",
+      "authorship_tag": "ABX9TyNSO/y+dY3rldaDfNm8WG7u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,8 @@
       "source": [
         "$X$~$N(m,\\sigma)$  \n",
         "$f(x) = \\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$   \n",
-        "$\\int_{-\\infty}^{\\infty}$$\\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$ = 1"
+        "$\\int_{-\\infty}^{\\infty}$$\\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$\n",
+        " = 1"
       ]
     },
     {
