--- a/math_symbol_prac.ipynb
+++ b/math_symbol_prac.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "math_symbol_prac.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNSO/y+dY3rldaDfNm8WG7u",
+      "authorship_tag": "ABX9TyOFi3lQHG5mJEPOPAycdm5y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,8 @@
       "source": [
         "$X$~$N(m,\\sigma)$  \n",
         "$f(x) = \\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$   \n",
-        "$\\int_{-\\infty}^{\\infty}$$\\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$\n",
+        "$\n",
+        "\\int_{-\\infty}^{\\infty}$$\\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$\n",
         " = 1"
       ]
     },
