--- a/math_symbol_prac.ipynb
+++ b/math_symbol_prac.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "math_symbol_prac.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOFi3lQHG5mJEPOPAycdm5y",
+      "authorship_tag": "ABX9TyM7FiaFwVRJyvr14jjQaEHG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,10 +70,9 @@
       },
       "source": [
         "$X$~$N(m,\\sigma)$  \n",
-        "$f(x) = \\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$   \n",
-        "$\n",
-        "\\int_{-\\infty}^{\\infty}$$\\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$\n",
-        " = 1"
+        "$f(x) = \\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$  \n",
+        "$\\int_{-\\infty}^{\\infty}\\frac{1}{\\sigma\\sqrt{2\\pi}}exp(-\\frac{(x-m)^2}{2\\sigma^2})$\n",
+        " "
       ]
     },
     {
